[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = {version = "0.12.9", features = ["json"]}
futures-util = "0.3.31"
warp = "0.3.7"
egui_messagebox = {version = "0.1.0", path = "../egui-messagebox"}